fix hero padding and hero text on mobile device

--- a/style.css
+++ b/style.css
@@ -1739,14 +1739,14 @@ a.contact-detail-value:hover {
     display: flex;
   }
 
-  .hero {
-  padding: 5rem 1.5rem 3rem;
-  background-position: right center;
-}
+   .hero {
+    padding: 4rem 1rem;
+  }
 
- .hero-text h1 {
-  font-size: clamp(1.4rem, 5vw, 2rem);
-}
+  .hero-text h1 {
+    font-size: 1.6rem;
+  }
+
 
 
   .hero-buttons {
@@ -1926,4 +1926,12 @@ a.contact-detail-value:hover {
   .contact-card {
     flex-direction: column;
     gap: 16px;
+  }
+
+   .hero {
+    padding: 4rem 1rem;
+  }
+
+  .hero-text h1 {
+    font-size: 1.6rem;
   }
